# difference-calculator

./: .README.md.swl  .README.md.swm  .README.md.swn  .README.md.swo  .README.md.swp  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  my_tests.yml
gendiff/: __init__.py  cli.py  constants.py  create_diff_get.py  data_format.py  generate_diff.py  parse.py  parser.py  read_file.py  single_diff_generate_function.py  str_template.py  stylish.py  user.py
gendiff/formaters/: json.py  one_level_formatter.py  plain.py  stylish.py
gendiff/json_files/: result.txt  work_with_json.py
gendiff/scripts/: comparison_of_flat_files.py  constants.py  diff.py
gendiff/tests/: one_level_formatter.py  test_create_diff_get.py  test_data_format.py  test_generate_diff.py  test_json.py  test_one_level_formatter.py  test_parse.py  test_parser.py  test_plain.py  test_read_file.py  test_str_template.py  test_stylish.py
gendiff/tests/fixtures/: file1.yaml  file2.yaml  test_create_diff_get_result.txt  test_json_dumps.txt  test_make_str_else.json  test_make_str_if.txt  test_plain.json  test_plain.txt  test_read_file.txt  test_result_stylish.txt  test_stringify.json  test_stringify.txt
tests/: test_create_diff_get.py  test_data_format.py  test_generate_diff.py  test_json.py  test_parse.py  test_plain.py  test_stylish.py
