[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["georg <georbearwolf.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.diff:main"
